<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministrarCuentas">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtcuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cuenta: "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email: "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre: "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtdocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DNI:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtsaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saldo: "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtestado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estado: "
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/txt_buscarcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/cuenta_buscar"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/bt_buscar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#757575"
        android:onClick="validarbusqueda"
        android:text="@string/boton_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_habil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#757575"
        android:onClick="Habilitar"
        android:text="@string/boton_habilitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/bt_deshabil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#757575"
        android:onClick="Deshabilitar"
        android:text="@string/boton_deshabilitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_habil" />

    <Button
        android:id="@+id/bt_saliradmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:backgroundTint="#757575"
        android:onClick="saliradmin"
        android:text="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listador"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Administrar Cuentas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="Nuevabusqueda"
        android:text="Nueva Busqueda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_deshabil" />

    <Button
        android:id="@+id/listador"
        android:onClick="irlistador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Listar Usuarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnueva" />
</androidx.constraintlayout.widget.ConstraintLayout>